bat.string1.lessons.bat.string1.Last2.scala.error
last2:4: error: not found: value dDC
  val dD = dDC(str)
           ^